public/css/styles-web.css
@import url("https://fonts.googleapis.com/css?family=Montserrat:300,300i,400,400i,500,600,700,900&display=swap");
@import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,300;0,400;0,500;0,700;0,900;1,300;1,400;1,500;1,700&display=swap");
@import url("https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,300;0,400;0,600;0,700;0,800;1,300;1,400;1,600&display=swap");

@import url("footer.css");

* {
    font-family: var(--font-family), sans-serif;
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

body {
    overflow-x: hidden;
}

h2,
h3,
a,
.card-places {
    -webkit-user-select: none;
    -moz-user-select: none;
    -ms-user-select: none;
    user-select: none;
}

/* ----- INICIO PAGINA ----- */
.principal-web {
    display: flex;
    flex-flow: column wrap;
    place-items: center;
    justify-content: center;
    background-color: var(--first-color);
    background-image: linear-gradient(62deg, var(--first-color) 0%, #f84848 100%);
    height: 70vh;
    width: 100%;
    overflow: hidden;
    position: relative;
}

.principal-web .logo img {
    padding: 1.5rem;
    height: 100%;
    width: 95%;
}

.principal-web .btn-down {
    justify-content: center;
    cursor: pointer;
    position: absolute;
    bottom: 10px;
    background: transparent;
    border: none;
}

.principal-web i {
    background-color: var(--second-color);
    color: var(--first-color);
    font-size: 45px;
    border-radius: 50%;
}

.principal {
    margin: 2rem;
    display: flex;
    flex-direction: column;
    place-items: center;
    overflow: hidden;
    color: rgb(63, 63, 63);
    background-color: var(--second-color);
}

.principal .welcome,
.principal p {
    align-self: start;
    text-align: justify;
    padding-top: 5px;
}

.principal .districts {
    display: flex;
    flex-wrap: wrap;
    justify-content: space-between;
    padding-top: 30px;
    width: 100%;
}

.principal .districts .information {
    display: flex;
    height: 200px;
    width: 100%;
    position: relative;
    background: var(--second-color);
    left: 0;
    top: 0;
    padding: 15px;
    margin-bottom: 20px;
    border-radius: 3px;
    overflow: hidden;
}

.principal .districts .information:before {
    content: "";
    position: absolute;
    top: 0;
    left: 0;
    display: block;
    width: 100%;
    height: 100%;
    background: rgba(255, 255, 255, 0.3);
    z-index: 2;
    transition: 0.5s all;
    opacity: 0;
    border-radius: 3px;
}

.principal .districts .information:link:before {
    opacity: 0.6;
}

.principal .districts .information .image {
    width: 100%;
    height: 100%;
    border-radius: 3px;
    position: absolute;
    top: 0;
    left: 0;
    transition: transform 2s;
}

.principal .districts .information:hover .image {
    transform: scale(1.1);
}

.principal .districts .information img {
    width: 500px;
    height: 250px;
    object-fit: fill;
}

.principal .districts .information .name {
    z-index: 3;
    overflow: hidden;
    font-size: 15px;
    font-weight: 300;
    text-transform: uppercase;
    letter-spacing: 2px;
    color: var(--second-color);
    text-shadow: 2px 2px 10px #363636;
    text-align: center;
    place-self: center;
    margin: 0 auto;
}

/* NAVBAR RESPONSIVE */
nav {
    display: flex;
    align-items: center;
    padding: 20px;
    height: 60px;
    background-color: var(--nav-color-web);
    color: var(--second-color);
    box-shadow: 0px 3px 5px rgb(0, 0, 0, .5);
    position: sticky;
    z-index: 100;
}

.logo {
    margin: 0 auto;
    text-align: center;
}

.logo img {
    width: auto;
    height: 50px;
    margin-top: 5px;
}

.logo a {
    color: var(--second-color);
    font-size: 15px;
    text-transform: uppercase;
    text-align: center;
}

.nav-links {
    position: absolute;
    z-index: 10;
    left: 0px;
    height: 100vh;
    width: 60%;
    background: var(--nav-color-web);
    top: 60px;
    display: flex;
    flex-direction: column;
    align-items: left;
    transform: translateX(-100%);
    transition: transform 0.5s ease-in;
}

.nav-links li {
    font-size: 17px;
    list-style: none;
    padding: 20px;
}

nav ul li i {
    display: inline-block;
    margin-right: 10px;
}

.nav-links a {
    color: var(--second-color);
    text-decoration: none;
    font-weight: 400;
}

.nav-links li:hover {
    background-color: var(--nav-color-hover);
    font-size: 18px;
    transition: all 300ms;
}

.burger div {
    background-color: var(--second-color);
    width: 20px;
    height: 3px;
    margin: 3px;
    transition: all 0.3s ease;
}

.burger {
    display: block;
    cursor: pointer;
}

/* ----- MAIN ----- */
/* BOX - CARDS */
.main-web {
    margin: 30px 20px;
    min-height: calc(100vh - 200px - 60px);
}

.box {
    overflow-x: scroll;
    overflow-y: hidden;
    white-space: nowrap;
    padding-bottom: 1em;
}

.box-activities {
    display: flex;
    flex-wrap: nowrap;
    overflow-x: auto;
    overflow-y: hidden;
    align-items: stretch;
}

.box::-webkit-scrollbar,
.box-activities::-webkit-scrollbar {
    height: 2px;
}

.box::-webkit-scrollbar-thumb,
.box-activities::-webkit-scrollbar-thumb {
    background: var(--fourth-color);
    border-radius: 8px;
}

.main-web h2 {
    font-size: 16px;
    font-weight: 500;
    margin: 30px 0 20px;
}

/* Subrayado de titulos */
.box-scroll h2::after {
    content: "";
    width: 90%;
    height: 2px;
    background-color: var(--first-color-web);
    opacity: 0.5;
    position: absolute;
    left: 15px;
    margin-top: 25px;
    margin-left: 5px;
}

.box-scroll h4 {
    font-size: 15px;
    font-weight: 500;
    font-style: italic;
    margin-top: 8px;
}

a {
    text-decoration: none;
    color: var(--third-color);
}

.card-accommodations,
.card-gastronomy,
.card-microservices {
    display: inline-block;
    margin-right: 10px;
}
/* ... */

